--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
+    "request": "^2.88.2",
     "validator": "^13.0.0"
   },
   "devDependencies": {
