--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
+    "puppeteer": "^3.0.2",
     "request": "^2.88.2",
     "validator": "^13.0.0"
   },
