--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "csv-parser": "^2.3.2",
     "express": "^4.17.1",
+    "fast-csv": "^4.1.3",
+    "fs": "0.0.1-security",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
+    "multer": "^1.4.2",
     "puppeteer": "^3.0.2",
     "request": "^2.88.2",
     "validator": "^13.0.0"
