--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.0",
     "mongoose": "^5.9.10",
     "puppeteer": "^3.0.2",
     "request": "^2.88.2"
