new structure of files

--- a/src/nodejs/package.json
+++ b/src/nodejs/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/nodejs/index",
-    "dev": "nodemon src/nodejs/index.js"
+    "start": "node index",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
