--- a/src/nodejs/package.json
+++ b/src/nodejs/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^5.9.10",
     "puppeteer": "^3.0.2",
     "request": "^2.88.2",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3",
