--- a/src/nodejs/package.json
+++ b/src/nodejs/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "http-proxy-agent": "^4.0.1",
     "https-proxy-agent": "^5.0.0",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.9.10",
     "puppeteer": "^3.0.2",
     "request": "^2.88.2",
